create simple UI

--- a/manifest.json
+++ b/manifest.json
@@ -13,5 +13,16 @@
   "background": {
     "persistent": false,
     "page": "bg/index.html"
+  },
+  "browser_action": {
+    "default_title": "Dictionary",
+    "default_popup": "popup/index.html",
+    "default_icon": {
+      "16": "icons/icon_16.png",
+      "32": "icons/icon_16.png",
+      "48": "icons/icon_16.png",
+      "64": "icons/icon_16.png",
+      "128": "icons/icon_16.png"
+    }
   }
 }
