--- a/manifest.json
+++ b/manifest.json
@@ -24,5 +24,6 @@
       "64": "icons/icon_16.png",
       "128": "icons/icon_16.png"
     }
-  }
+  },
+  "permissions": ["https://*.oxfordlearnersdictionaries.com/"]
 }
