--- a/manifest.json
+++ b/manifest.json
@@ -42,9 +42,9 @@
 			"suggested_key": {
 				"default": "Alt + Shift + S",
 				"windows": "Alt + Shift + S",
-				"mac": "Alt + Shift + S",
-				"chromeos": "Alt + Shift + S",
-				"linux": "Alt + Shift + S"
+				"mac": "Alt + Shift + A",
+				"chromeos": "Alt + Shift + A",
+				"linux": "Alt + Shift + A"
 			},
 			"description": "Focus Textbox"
 		}
